--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -1070,3 +1070,24 @@ textarea{
 textarea:hover{
   background-color: rgba(85, 85, 85, 0.377);
 }
+
+button{
+  background-color: rgb(250, 250, 250);
+  padding: 15px;
+  margin-left: 12%;
+  border: 0;
+  font-family: 'Lato', sans-serif;
+  font-weight: 800;
+  border-bottom:2px solid rgba(85, 85, 85, 0.61); 
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+  border-radius: 10px;
+  width: 75%; 
+  height: 10%; 
+  font-size: 25;
+  cursor: pointer;
+  margin-top: 3%;
+}
+
+button:hover {
+  background-color: rgba(85, 85, 85, 0.377);
+}
