--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -1091,6 +1091,7 @@ textarea:hover{
 button{
   background-color: rgb(250, 250, 250);
   padding: 15px;
+  color: black;
   margin-left: 12%;
   border: 0;
   font-family: 'Lato', sans-serif;
