--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -76,10 +76,21 @@ header{
   justify-content: space-around;
   flex-direction: column;
   width: 100%;
-  height: 350px;
+  height: 550px;
   margin-bottom: 200px;
   text-align: center;
 
+}
+
+.casamos{
+  padding-top: 4%;
+  position: relative;
+  font-weight: 600;
+  font-size: 60;
+  width: 80%;
+  left: 10%;
+  font-family: 'Lato', sans-serif;
+  color: rgb(0, 0, 0);
 }
 
 .historiadescripcion{
